Instrucciones de ejecucion de los códigos

--- a/Advec_Diffu/README
+++ b/Advec_Diffu/README
@@ -1,3 +1,5 @@
+# Finite Volume Method
+
 En esta carpeta se encuentran todos los archivos necesarios para ejecutar los diferentes ejercicios propuestos.
 
 Los archivos a ejecutar son los que continen el nombre TareaX.py
