--- a/Advec_Diffu/README
+++ b/Advec_Diffu/README
@@ -8,7 +8,7 @@ En todos estos ejercicios es posible elegir el algoritmo para solucionar el sist
 
 Para seleccionar qué algoritmo utilizar se encuentra la linea de:
 
-  algoritmo = 'Opcion'
+	algoritmo = 'Opcion'
 
 donde 'Opcion' puede ser 'Sparse' o 'Default (LU Decomp)'
 
@@ -17,7 +17,16 @@ En aquellos donde se incluye el término advectivo se puede elegir el esquema de
 	scheme = 'Opcion'
 
 donde 'Opcion' puede ser:
-'Upwind'  --- Upwind de primer orden
-'CDS'	  --- Diferencias centradas
-'Upwind2' --- Upwind de segundo orden
-'Quick'   --- Quadratic Upstream Interpolation for Convective Kinematics
+  'Upwind'  --- Upwind de primer orden
+  'CDS'	  --- Diferencias centradas
+  'Upwind2' --- Upwind de segundo orden
+  'Quick'   --- Quadratic Upstream Interpolation for Convective Kinematics
+
+En el archivo Tarea4.py se consideran los casos:
+  i) Cuando u = 0.1 m/s y 5 nodos
+  ii) Cuando u = 2.5 m/s y 5 nodos
+  iii) Cuando u = 2.5 m/s y 20 nodos
+
+Se deberán comentar y descomentar las líneas correspondientes.
+
+
